--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="https://img.icons8.com/ios-filled/100/ffffff/restaurant.png" alt="Hotel Logo" class="logo" />
     <h1>Welcome to<br><span>Hotel Krushnali, Savda</span></h1>
     <p>Your taste, our priority.<br>Explore our delicious menu now.</p>
-    <a href="./menu/dishes.html" class="menu-btn">🍽️ View Menu</a>
+    <a href="./menu.html" class="menu-btn">🍽️ View Menu</a>
   </div>
 </body>
 </html>
