--- a/admin/home.html
+++ b/admin/home.html
@@ -9,13 +9,13 @@
 <body>
     <h1 id="mh"> Heyy , Kuldeep <span>Welcome Back !</span></h1>
     <div class="main">
-        <a href="/admin/category.html">
+        <a href="/hotelKrishnali/admin/category.html">
           <div class="mainineer">
                 <h1>Category</h1>
           </div>
         </a>
 
-        <a href="/admin/dishes.html">
+        <a href="/hotelKrishnali/admin/dishes.html">
           <div class="mainineer">
            <h1> dishes</h1>
           </div>
